--- a/packages/basalt/css/tokens.css
+++ b/packages/basalt/css/tokens.css
@@ -144,8 +144,8 @@
    */
     --basalt-motion-ease-in-quad: cubic-bezier(0.55, 0.085, 0.68, 0.53);
     --basalt-motion-ease-in-quart: cubic-bezier(0.895, 0.03, 0.685, 0.22);
-    --basalt-motion-ease-in-quad: cubic-bezier(0.25, 0.46, 0.45, 0.94);
-    --basalt-motion-ease-in-quart: cubic-bezier(0.165, 0.84, 0.44, 1);
+    --basalt-motion-ease-out-quad: cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    --basalt-motion-ease-out-quart: cubic-bezier(0.165, 0.84, 0.44, 1);
     --basalt-motion-ease-in-out-quad: cubic-bezier(0.455, 0.03, 0.515, 0.955);
     --basalt-motion-ease-in-out-quart: cubic-bezier(0.77, 0, 0.175, 1);
 
@@ -183,7 +183,7 @@
 
   :root {
     /* based on Tailwind's spacing scale, where 1 unit = 0.25rem (4px). */
-    --basalt-sizing-0: 0px;
+    --basalt-sizing-0: 0;
     --basalt-sizing-half: 0.125rem;
     --basalt-sizing-1: 0.25rem;
     --basalt-sizing-1-half: 0.375rem;
